deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: arthouse
  name: arthouse-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arthouse
  template:
    metadata:
      labels:
        app: arthouse
    spec:
      containers:
        - name: arthouse
          image: dmitryhoncharuk/arthouse:stage
          readinessProbe:
            httpGet:
              port: 3000
              path: /healthz
            initialDelaySeconds: 5
            periodSeconds: 5
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  namespace: arthouse
  name: arthouse-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: arthouse
  ports:
    - name: arthouse
      protocol: TCP
      port: 3000
      targetPort: 3000
